--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -6,24 +6,25 @@
     </head>
 <body>
 {{#user}}
-<span>Hello {{name}}, please place your order.</span>
-<!--your email address is: {{email}}.</span>-->
-{{/user}}
-</body>
-</html>
+<span>Hello {{name}}.</span>
 
-
-</head>
-<body>
 <ul>
-    {{#home}}
+    {{#items}}
     <li>{{name}}</li>
     <li>{{quantity}}</li>
     <li>{{price}}</li>
-    {{/home}}
-
+    {{/items}}
 </ul>
-<!--<h2>Welcome, place your order please.</h2>-->
+
+<form action="/checkout" method="post">
+    <input type="submit" value="Click to check out." />
+</form>
+
+{{^items}}
+<h2>Your Cart Contains No Items.</h2>
+{{/items}}
+
+Add an item:
 <form method="post" action="/order">
 
     Name:
@@ -38,14 +39,11 @@
     <input type="submit"/>
 
 </form>
+{{/user}}
 
-<!--<br>-->
-<!--<h1>Delete a restaurant</h1>-->
-<!--<form method="post" action="/delete-restaurant" >-->
-    <!--ID:-->
-    <!--<input type="text" name="id"/>-->
-
-    <!--<input type="submit"/>-->
-<!--</form>-->
+{{^user}}
+<span>You are not logged in.</span>
+<a href="/login">Click Here to Login</a>
+{{/user}}
 </body>
 </html>
