--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -6,7 +6,7 @@
     </head>
 <body>
 <form method="post" action="/login">
-    <input type="email" name="email" required placeholder="Email Address" />
+    <input type="email" name="email" required placeholder="Enter Email" />
         <input type= "submit" />
     </form>
 </body>
